--- a/html/index-new.html
+++ b/html/index-new.html
@@ -7,7 +7,7 @@
     <meta name="description" content="電子世界『艾爾芙卡』：能以正確的聲音創造、摧毀與改變萬物。體驗回合制 × PVP × 可變地形的創新戰棋遊戲。">
     
     <!-- Favicon -->
-    <link rel="icon" href="assets/images/LOGO.png" type="image/png">
+    <link rel="icon" href="assets/images/logo.png" type="image/png">
     
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/brand-new.css">
@@ -25,12 +25,12 @@
     <!-- 導航列 -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <a href="index.html" class="nav-brand">
+            <a href="index-new.html" class="nav-brand">
                 <img src="assets/images/LOGO.png" alt="艾爾芙卡 Logo" class="nav-logo">
                 艾爾芙卡
             </a>
             <ul class="nav-menu">
-                <li><a href="index.html" class="nav-link active">首頁</a></li>
+                <li><a href="index-new.html" class="nav-link active">首頁</a></li>
                 <li><a href="download.html" class="nav-link">下載點</a></li>
                 <li><a href="world.html" class="nav-link">世界展示</a></li>
                 <li><a href="characters.html" class="nav-link">角色展示</a></li>
