--- a/html/world.html
+++ b/html/world.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang=                <img src="assets/images/logo.png" alt="艾爾芙卡 Logo" class="nav-logo">zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
     <meta name="description" content="探索電子世界『艾爾芙卡』，在這裡聲音能夠創造、摧毀與改變萬物">
     
     <!-- Favicon -->
-    <link rel="icon" href="assets/images/LOGO.png" type="image/png">
+        <link rel="icon" href="assets/images/logo.png" type="image/png">
     
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/brand-new.css">
