--- a/html/characters.html
+++ b/html/characters.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>艾爾芙卡角色介紹 - 聲音戰士們</title>
+                 <img src="assets/images/logo.png" alt="艾爾芙卡 Logo" class="nav-logo">  <title>艾爾芙卡角色介紹 - 聲音戰士們</title>
     <meta name="description" content="認識卡兒芬、瑠波等獨特角色，了解他們的專屬武器、技能與使用率統計">
     
     <!-- Favicon -->
-    <link rel="icon" href="assets/images/LOGO.png" type="image/png">
+    <link rel="icon" href="assets/images/logo.png" type="image/png">
     
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/brand-new.css">
