--- a/html/download.html
+++ b/html/download.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
+<!DOCTYP    <!-- Favicon -->
+    <link rel="icon" href="assets/images/logo.png" type="image/png">html>
 <html lang="zh-TW">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8                <img src="assets/images/logo.png" alt="艾爾芙卡 Logo" class="nav-logo">>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>下載艾爾芙卡 - 三平台支援</title>
     <meta name="description" content="Windows、Android、iOS 三平台下載，立即體驗創新戰棋遊戲">
     
     <!-- Favicon -->
-    <link rel="icon" href="assets/images/LOGO.png" type="image/png">
+    <link rel="icon" href="assets/images/logo.png" type="image/png">
     
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/brand-new.css">
