--- a/html/gameplay.html
+++ b/html/gameplay.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
+<!DOCTYP    <!-- Favicon -->
+    <link rel="icon" href="assets/images/logo.png" type="image/png">html>
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                  <img src="assets/images/logo.png" alt="艾爾芙卡 Logo" class="nav-logo"> <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>艾爾芙卡玩法介紹 - 創新戰棋規則</title>
     <meta name="description" content="了解艾爾芙卡的核心規則、對戰流程、地形系統與QTE機制">
     
     <!-- Favicon -->
-    <link rel="icon" href="assets/images/LOGO.png" type="image/png">
+    <link rel="icon" href="assets/images/logo.png" type="image/png">
     
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/brand-new.css">
