--- a/html/gameplay.html
+++ b/html/gameplay.html
@@ -162,7 +162,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <a href="index-new.html" class="nav-brand">
-                <img src="assets/images/LOGO.png" alt="艾爾芙卡 Logo" class="nav-logo">
+                <img src="assets/images/logo.png" alt="艾爾芙卡 Logo" class="nav-logo">
                 艾爾芙卡
             </a>
             <ul class="nav-menu">
