--- a/html/world.html
+++ b/html/world.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=                <img src="assets/images/logo.png" alt="艾爾芙卡 Logo" class="nav-logo">zh-TW">
+<html lang=zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
