--- a/html/characters.html
+++ b/html/characters.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                 <img src="assets/images/logo.png" alt="艾爾芙卡 Logo" class="nav-logo">  <title>艾爾芙卡角色介紹 - 聲音戰士們</title>
+    <title>艾爾芙卡角色介紹 - 聲音戰士們</title>
     <meta name="description" content="認識卡兒芬、瑠波等獨特角色，了解他們的專屬武器、技能與使用率統計">
     
     <!-- Favicon -->
